--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
         font-weight: 400;
         font-style: normal;
       }
+
+      .color-primary {
+        color: #abef5f;
+      }
+      .bg-color-primary {
+        background-color: #abef5f;
+      }
     </style>
 
     <!-- daisyui cdn -->
@@ -52,11 +59,273 @@
     ></script>
   </head>
 
-  <body>
+  <body class="manrope-font">
     <!-- header section -->
-    <header></header>
+    <header class="max-w-screen-xl mx-auto">
+      <!-- nav section -->
+      <nav>
+        <div class="navbar bg-base-100 shadow-sm mt-10">
+          <div class="navbar-start">
+            <div class="dropdown">
+              <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-5 w-5"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M4 6h16M4 12h8m-8 6h16"
+                  />
+                </svg>
+              </div>
+              <ul
+                tabindex="0"
+                class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow"
+              >
+                <li><a>Item 1</a></li>
+                <li>
+                  <a>Parent</a>
+                  <ul class="p-2">
+                    <li><a>Submenu 1</a></li>
+                    <li><a>Submenu 2</a></li>
+                  </ul>
+                </li>
+                <li><a>Item 3</a></li>
+              </ul>
+            </div>
+            <div class="items-center flex gap-3">
+              <i
+                class="fa-solid fa-arrow-right -rotate-30 bg-color-primary p-2 rounded-[50%]"
+              ></i>
+              <a class="font-extrabold text-3xl">Rinterio</a>
+            </div>
+          </div>
+
+          <div class="navbar-center hidden lg:flex">
+            <ul class="menu menu-horizontal px-1">
+              <li><a class="text-black font-extrabold text-base">Home</a></li>
+              <li><a class="text-gray-500 text-base">Services</a></li>
+              <li><a class="text-gray-500 text-base">Portfolio</a></li>
+              <li><a class="text-gray-500 text-base">Blogs</a></li>
+              <li><a class="text-gray-500 text-base">Contact Us</a></li>
+            </ul>
+          </div>
+
+          <div class="navbar-end">
+            <div class="flex items-center gap-6 justify-around">
+              <img
+                class="bg-gray-200 border-red-100 p-4 rounded-full"
+                src="assets/icon/Vector.png"
+                alt=""
+              />
+              <img
+                class="bg-gray-200 p-4 rounded-full"
+                src="assets/icon/shopping-cart-01.png"
+                alt=""
+              />
+              <div class="py-4 px-6 bg-[#ABEF5F] flex gap-3 rounded-3xl">
+                <button class="font-extrabold text-xl">
+                  Book Consults
+                  <i
+                    class="fa-solid fa-arrow-right -rotate-30 bg-black text-white p-2 rounded-[50%]"
+                  ></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
     <!-- main content section -->
-    <main></main>
+    <main>
+      <!-- header section -->
+      <section class="max-w-screen-xl mx-auto">
+        <div class="flex flex-col items-center justify-evenly gap-5">
+          <img class="p-5" src="assets/banner.png" alt="" />
+          <div class="text-center w-5/6">
+            <h1 class="text-6xl font-bold pb-5">
+              A barn house of this design has a striking appearance
+            </h1>
+            <p class="text-base text-gray-400">
+              The barn house captivates with its blend of rustic charm and
+              modern sophistication, featuring weathered wood, sleek metal
+              accents, and large windows that flood the space with natural
+              light.
+            </p>
+
+            <div class="text-center pt-4">
+              <button
+                class="bg-lime-200 text-black font-semibold py-3 px-6 rounded-3xl md:inline-flex items-center space-x-2"
+              >
+                <span class="text-lg font-bold">View Details</span>
+                <span class="bg-lime-500 text-white rounded-full p-1">
+                  <i
+                    class="fa-solid fa-arrow-right -rotate-30 bg-lime-500 text-black p-2 rounded-[50%]"
+                  ></i>
+                </span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- about us section -->
+      <section class="bg-gray-200 mt-24">
+        <div>
+          <img class="ml-24 p-9" src="assets/Vector.png" alt="" />
+        </div>
+
+        <div
+          class="grid grid-cols-1 md:grid-cols-2 gap-5 max-w-screen-xl mx-auto"
+        >
+          <div>
+            <div>
+              <button class="btn bg-white rounded-3xl py-3 px-5 my-3">
+                <i class="fa-solid fa-arrow-right"></i>About Us
+              </button>
+            </div>
+            <div>
+              <h1 class="text-4xl font-bold my-4">
+                We design thoughtful, <br />
+                liveable spaces
+              </h1>
+              <p class="my-4">
+                The barn house captivates with its blend of rustic charm and
+                modern sophistication, featuring weathered wood, sleek metal
+                accents.
+              </p>
+            </div>
+
+            <div
+              class="bg-white rounded-2xl py-6 px-6 flex items-center gap-4 mb-4"
+            >
+              <div>
+                <img src="assets/commercial.png" alt="" />
+              </div>
+              <div>
+                <h2 class="text-lg font-bold">Commercial</h2>
+                <p class="text-base text-gray-400">
+                  The barn house captivates with its blend of rustic charm and
+                  modern.
+                </p>
+              </div>
+            </div>
+            <div class="bg-white rounded-2xl py-6 px-6 flex items-center gap-4">
+              <div>
+                <img src="assets/residential.png" alt="" />
+              </div>
+              <div>
+                <h2 class="text-lg font-bold">Residential</h2>
+                <p class="text-base text-gray-400">
+                  The barn house captivates with its blend of rustic charm and
+                  modern.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div>
+            <img class="w-full" src="assets/Rectangle.png" alt="" />
+          </div>
+        </div>
+      </section>
+
+      <!-- review section -->
+      <section class="bg-gray-200 pt-24">
+        <div
+          class="bg-white rounded-2xl max-w-screen-xl mx-auto grid md:grid-cols-4 grid-cols-1 p-8"
+        >
+          <div class="text-center flex flex-col gap-4 p-6">
+            <i class="fa-solid fa-comment-sms text-4xl text-gray-500"></i>
+            <h1 class="text-5xl font-bold">235+</h1>
+            <p class="text-base">Happy Client Review</p>
+          </div>
+          <div class="text-center flex flex-col gap-4 p-6">
+            <i class="fa-solid fa-house text-4xl text-gray-500"></i>
+            <h1 class="text-5xl font-bold">235+</h1>
+            <p class="text-base">Happy Client Review</p>
+          </div>
+          <div class="text-center flex flex-col gap-4 p-6">
+            <i class="fa-solid fa-user-group text-4xl text-gray-500"></i>
+            <h1 class="text-5xl font-bold">235+</h1>
+            <p class="text-base">Happy Client Review</p>
+          </div>
+          <div class="text-center flex flex-col gap-4 p-6">
+            <i class="fa-solid fa-comment-sms text-4xl text-gray-500"></i>
+            <h1 class="text-5xl font-bold">235+</h1>
+            <p class="text-base">Happy Client Review</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Works Process -->
+      <section class="bg-gray-200 py-24">
+        <div>
+          <div class="text-center">
+            <button class="btn bg-white rounded-3xl py-3 px-5 my-3">
+              <i class="fa-solid fa-arrow-right"></i>How we works
+            </button>
+          </div>
+
+          <div class="text-center">
+            <h1 class="text-4xl font-bold py-3">Our Works Process</h1>
+            <p class="py-3 text-base">
+              The barn house captivates with its blend of rustic charm and
+              modern sophistication,<br />
+              featuring weathered wood, sleek metal accents.
+            </p>
+          </div>
+        </div>
+
+        <div>
+          <div
+            class="max-w-screen-xl mx-auto card card-border bg-base-100 grid grid-cols-1 md:grid-cols-4 justify-between items-center gap-4 mt-8 bg-gray-200"
+          >
+            <!-- card 1 -->
+            <div class="card-body bg-[#E7C1D3] p-7 rounded-2xl">
+              <i class="fa-solid fa-lightbulb text-5xl"></i>
+              <h2 class="card-title text-xl font-extrabold">Concept</h2>
+              <p class="text-gray-700">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
+            </div>
+            <!-- card 2 -->
+            <div class="card-body bg-[#EFDA6E] p-7 rounded-2xl">
+              <i class="fa-solid fa-lightbulb text-5xl"></i>
+              <h2 class="card-title text-xl font-extrabold">Concept</h2>
+              <p class="text-gray-700">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
+            </div>
+            <!-- card 3 -->
+            <div class="card-body bg-[#A4DAC3] p-7 rounded-2xl">
+              <i class="fa-solid fa-lightbulb text-5xl"></i>
+              <h2 class="card-title text-xl font-extrabold">Concept</h2>
+              <p class="text-gray-700">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
+            </div>
+            <!-- card 4 -->
+            <div class="card-body bg-[#77AAEA] p-7 rounded-2xl">
+              <i class="fa-solid fa-lightbulb text-5xl"></i>
+              <h2 class="card-title text-xl font-extrabold">Concept</h2>
+              <p class="text-gray-700">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- footer main section -->
     <footer></footer>
   </body>
